html done, logo img added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,97 @@
     <title>Fotografin-Portfolio</title>
 </head>
 <body>
-    
+    <Header>
+        <img src="./assets/img/Link ⏵ logo-black.png.png" alt="sene-ca logo" class="logo">
+        <p class="menu-bürger">&#9776</p>
+    </Header>
+    <main>
+        <section>
+            <h2>Donec rutrum congue leo eget malesuada lacinia eget consectetur.</h2>
+            <p>Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Vivamus magna convallis at tellus. Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi.</p>
+        </section>
+        <section class="gallery">
+            <div class="galery_column">
+                <article>
+                    <img src="./assets/img/Link ⏵ photo-1.jpg.png" alt="img1">
+                    <p>Curabitur non nulla</p>
+                </article>
+                <article>
+                    <img src="./assets/img/Link ⏵ photo-2.jpg.png" alt="img1">
+                    <p>Vivamus magna convallis</p>
+                </article>
+                <article>
+                    <img src="./assets/img/Link ⏵ photo-3.jpg.png" alt="img1">
+                    <p>Lacinia eget consectetur</p>
+                </article>
+            </div>
+            <div class="galery_column">
+                <article>
+                    <img src="./assets/img/Link ⏵ photo-4.jpg.png" alt="img1">
+                    <p>Convallis a pellentesque</p>
+                </article>
+                <article>
+                    <img src="./assets/img/Link ⏵ photo-5.jpg.png" alt="img1">
+                    <p>Egestas non nisi</p>
+                </article>
+                <article>
+                    <img src="./assets/img/Link ⏵ photo-6.jpg.png" alt="img1">
+                    <p>Vivamus magna convallis</p>
+                </article>
+            </div>
+            <div class="galery_column">
+                <article>
+                    <img src="./assets/img/Link ⏵ photo-7.jpg.png" alt="img1">
+                    <p>Eget malesuada lacinia</p>
+                </article>
+                <article>
+                    <img src="./assets/img/Link ⏵ photo-8.jpg.png" alt="img1">
+                    <p>Donec rutrum congue</p>
+                </article>
+                <article>
+                    <img src="./assets/img/Link ⏵ photo-9.jpg.png" alt="img1">
+                    <p>Magna eget rutrum</p>
+                </article>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div>
+            <ul>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Story</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Contacts</a></li>
+            </ul>
+            <ul>
+                <li><a href="#">Privacy</a></li>
+                <li><a href="#">Termini di utilizzo</a></li>
+                <li><a href="#">Note legali</a></li>
+                <li><a href="#">Credits</a></li>
+            </ul>
+            <ul>
+                <li>FONDAZIONE SENECA</li>
+                <li>Via Longhena 116</li>
+                <li>00060 - Nazzano (ROMA)</li>
+                <li>TEL. +39 0327 8523827</li>
+            </ul>
+        </div>
+        <form action="">
+            <h2>Get in Touch</h2>
+            <div>
+                <label for="name">Name:</label>
+                <input type="text" id="name">
+            </div>
+            <div>
+                <label for="email">Email Address:</label>
+                <input type="email" id="email">
+            </div>
+            <div>
+                <label for="message">Message:</label>
+                <textarea name="message" id="message" cols="30" rows="10"></textarea>
+            </div>
+            <button type="submit"></button>
+        </form>
+    </footer>
 </body>
 </html>
