--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>Fotografin-Portfolio</title>
 </head>
 <body>
-    <Header>
+    <header>
         <img src="./assets/img/Link ⏵ logo-black.png.png" alt="sene-ca logo" class="logo">
         <p class="menu-bürger">&#9776</p>
-    </Header>
+    </header>
     <main>
         <section>
             <h2>Donec rutrum congue leo eget malesuada lacinia eget consectetur.</h2>
