--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <p class="menu-bürger">&#9776</p>
     </header>
     <main>
-        <section>
+        <section class="hero">
             <h2>Donec rutrum congue leo eget malesuada lacinia eget consectetur.</h2>
             <p>Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Vivamus magna convallis at tellus. Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi.</p>
         </section>
