--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
             </div>
             <div>
                 <label for="message">Message:</label>
-                <textarea name="message" id="message" cols="30" rows="10"></textarea>
+                <textarea name="message" id="message" cols="30" rows="6"></textarea>
             </div>
-            <button type="submit"></button>
+            <button type="submit">Send</button>
         </form>
     </footer>
 </body>
