hover effect added

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <header>
-        <img src="./assets/img/Link ⏵ logo-black.png.png" alt="sene-ca logo" class="logo">
-        <p class="menu-bürger">&#9776</p>
+        <a href=""><img src="./assets/img/Link ⏵ logo-black.png.png" alt="sene-ca logo" class="logo"></a>
+        <a href="">
+            <p class="menu-bürger">&#9776</p>
+        </a>
     </header>
     <main>
         <section class="hero">
